# chat_srver

./: README.md
client/: CMakeLists.txt
client/include/: client.h
client/src/: client.c
server/: CMakeLists.txt
server/include/: queue.h  server.h  thread_handler.h
server/src/: queue.c  server.c  thread_handler.c
src/: main.c
src/client/: a.out  client.c
src/server/: a.out  server.c  thread_handler.c
